# taskmaster-pro

./: README.md  pyproject.toml
prisma/: dev.db  dev.db-journal  schema.prisma
taskmaster/: __init__.py
taskmaster/application/services/: __init__.py  task_service.py
taskmaster/domain/: __init__.py  errors.py
taskmaster/domain/entities/: __init__.py  task.py
taskmaster/domain/repositories/: __init__.py  task_repository.py
taskmaster/domain/value_objects/: __init__.py  partial_task_update.py
taskmaster/infrastructure/: __init__.py
taskmaster/infrastructure/persistence/: __init__.py  prisma_task_repository.py
taskmaster/presentation/: __init__.py  main.py
taskmaster/presentation/api/: __init__.py  dependencies.py  error_handlers.py
taskmaster/presentation/api/routes/: tasks.py
taskmaster/presentation/schemas/: envelope.py  task.py
taskmaster_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: conftest.py  test_tasks_status_filter.py
tests/unit/: test_task_service.py
